--- a/_preview/1/_sources/notebooks/eof-background.ipynb
+++ b/_preview/1/_sources/notebooks/eof-background.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Background for EOFs"
+    "# EOF Background"
    ]
   },
   {
