Clean up intro notebook and readme

--- a/notebooks/climate-modes-xeofs.ipynb
+++ b/notebooks/climate-modes-xeofs.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/ProjectPythia_Logo_Final-01-Blue.svg\" width=250 alt=\"Project Pythia Logo\"></img>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Finding Climate Modes with EOFs"
    ]
   },
@@ -26,7 +19,7 @@
    "metadata": {},
    "source": [
     "## Overview\n",
-    "In this notebook, we will identify and plot a few different modes of climate variability with the help of an EOF package that works with Xarray called [`xeofs`](https://github.com/nicrie/xeofs)."
+    "In this notebook, we will identify and plot a few different modes of climate variability with the help of an EOF package that interfaces with Xarray called [`xeofs`](https://github.com/nicrie/xeofs)."
    ]
   },
   {
