--- a/notebooks/eof-intro.ipynb
+++ b/notebooks/eof-intro.ipynb
@@ -161,7 +161,7 @@
     "In this notebook, we covered some background on EOFs, the steps required to carry out an EOF analysis, and some of the math behind the analysis.\n",
     "\n",
     "### What's next?\n",
-    "An example of carrying out an EOF analysis on idealized data using NumPy."
+    "An example of carrying out an EOF analysis on idealized data using NumPy. (Coming soon!)"
    ]
   },
   {
