--- a/_sources/notebooks/eof-intro.ipynb
+++ b/_sources/notebooks/eof-intro.ipynb
@@ -4,14 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/ProjectPythia_Logo_Final-01-Blue.svg\" width=250 alt=\"Project Pythia Logo\"></img>"
+    "# Introduction to EOFs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to EOFs"
+    "<div class=\"admonition alert alert-info\">\n",
+    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Note</p>\n",
+    "    This content is under construction.\n",
+    "</div>"
    ]
   },
   {
@@ -26,6 +29,7 @@
    "metadata": {},
    "source": [
     "## Overview\n",
+    "\n",
     "In this notebook, we will provide some background on empirical orthogonal functions (EOFs), develop some intuition, and cover the relevant mathematics."
    ]
   },
@@ -97,7 +101,7 @@
    "source": [
     "## Deriving the eigenvalue problem\n",
     "\n",
-    "It is not obvious why solving the eigenvalue problem for the covariance matrix results in spatial patterns that align well with the data. The following explanation follows those given by Preisendorfer (1988), Peixoto and Oort (1992), Bjornsson and Venegas (1997).\n",
+    "It is not obvious why solving the eigenvalue problem for the covariance matrix results in spatial patterns that align well with the data. The following explanation follows those given by Preisendorfer (1988), Peixoto et al. (1992), and Björnsson and Venegas (1997).\n",
     "\n",
     "Let $f(x, t)$ be a geophysical field recorded over locations $x_1, x_2, \\dots, x_M$ and times $t_1, t_2, \\dots, t_N$. In matrix notation, we can write each map of $M$ locations as the column vector $\\mathbf{f}_n=\\begin{bmatrix}f_{1n} & f_{2n} & \\cdots & f_{Mn}\\end{bmatrix}^\\mathrm T$, where $n=1, \\dots, N$. We then have an $M\\times N$ matrix that can be written as $\\mathbf F=\\begin{bmatrix}\\mathbf{f}_1 & \\mathbf{f}_2 & \\cdots & \\mathbf{f}_N\\end{bmatrix}$. \n",
     "\n",
@@ -154,10 +158,10 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "Add one final `---` marking the end of your body of content, and then conclude with a brief single paragraph summarizing at a high level the key pieces that were learned and how they tied to your objectives. Look to reiterate what the most important takeaways were.\n",
+    "In this notebook, we covered some background on EOFs, the steps required to carry out an EOF analysis, and some of the math behind the analysis.\n",
     "\n",
     "### What's next?\n",
-    "Let Jupyter book tie this to the next (sequential) piece of content that people could move on to down below and in the sidebar. However, if this page uniquely enables your reader to tackle other nonsequential concepts throughout this book, or even external content, link to it here!"
+    "An example of carrying out an EOF analysis on idealized data using NumPy. (Coming soon!)"
    ]
   },
   {
@@ -165,14 +169,12 @@
    "metadata": {},
    "source": [
     "## Resources and references\n",
-    "Finally, be rigorous in your citations and references as necessary. Give credit where credit is due. Also, feel free to link to relevant external material, further reading, documentation, etc. Then you're done! Give yourself a quick review, a high five, and send us a pull request. A few final notes:\n",
-    " - `Kernel > Restart Kernel and Run All Cells...` to confirm that your notebook will cleanly run from start to finish\n",
-    " - `Kernel > Restart Kernel and Clear All Outputs...` before committing your notebook, our machines will do the heavy lifting\n",
-    " - Take credit! Provide author contact information if you'd like; if so, consider adding information here at the bottom of your notebook\n",
-    " - Give credit! Attribute appropriate authorship for referenced code, information, images, etc.\n",
-    " - Only include what you're legally allowed: **no copyright infringement or plagiarism**\n",
-    " \n",
-    "Thank you for your contribution!"
+    "\n",
+    "Björnsson, H., & Venegas, S. A. (1997). A manual for EOF and SVD analyses of climatic data. *CCGCR Report*, *97*(1), 112-134.\n",
+    "\n",
+    "Peixoto, J. P., Oort, A. H., & Lorenz, E. N. (1992). *Physics of climate* (Vol. 520). New York: American Institute of Physics.\n",
+    "\n",
+    "Preisendorfer, R. Ä. N. Ü. (1988). Principal component analysis in meteorology and oceanography. *Elsevier Sci. Publ.*, *17*, 425."
    ]
   }
  ],
