Add xeofs citation

--- a/notebooks/climate-modes-xeofs.ipynb
+++ b/notebooks/climate-modes-xeofs.ipynb
@@ -489,7 +489,9 @@
    "metadata": {},
    "source": [
     "## Resources and references\n",
-    "Huang, B., Thorne, P. S., Banzon, V., Boyer, T. P., Chepurin, G. A., Lawrimore, J. H., Menne, M. J., Smith, T. J., Vose, R. S., & Zhang, H. (2017). Extended Reconstructed Sea Surface Temperature, Version 5 (ERSSTv5): Upgrades, Validations, and Intercomparisons. *Journal of Climate*, *30*(20), 8179–8205. https://doi.org/10.1175/jcli-d-16-0836.1"
+    "Huang, B., Thorne, P. S., Banzon, V., Boyer, T. P., Chepurin, G. A., Lawrimore, J. H., Menne, M. J., Smith, T. J., Vose, R. S., & Zhang, H. (2017). Extended Reconstructed Sea Surface Temperature, Version 5 (ERSSTv5): Upgrades, Validations, and Intercomparisons. *Journal of Climate*, *30*(20), 8179–8205. https://doi.org/10.1175/jcli-d-16-0836.1\n",
+    "\n",
+    "Niclas Rieger, actions-user, Sam Levang, & Aaron Spring. (2023). nicrie/xeofs: v0.7.2 (v0.7.2). Zenodo. https://doi.org/10.5281/zenodo.7521663"
    ]
   }
  ],
