--- a/_sources/notebooks/eof-intro.ipynb
+++ b/_sources/notebooks/eof-intro.ipynb
@@ -90,7 +90,7 @@
     "1. Organize your data into a 2-dimensional matrix $\\mathbf F$ and remove the mean from each time series\n",
     "1. Calculate the covariance matrix $\\mathbf R=\\mathbf F\\mathbf F^\\mathrm T$\n",
     "1. Find the eigenvectors (EOFs) $\\mathbf e_m\\in\\mathbf E$ and eigenvalues $\\lambda_m\\in\\mathbf\\Lambda$ of $\\mathbf R$ by solving $\\mathbf R\\mathbf E=\\mathbf\\Lambda\\mathbf E$\n",
-    "1. Order the eigenectors by their eigenvalues, since the eigenvalues are proportional to the fraction of variance explained by that mode\n",
+    "1. Order the eigenvectors by their eigenvalues, since the eigenvalues are proportional to the fraction of variance explained by that mode\n",
     "1. Calculate the PCs for each mode with $\\mathbf c_m=\\mathbf e_m^\\mathrm T\\cdot\\mathbf F$ (i.e. projecting your data onto each eigenvector/EOF)\n",
     "1. Find the variance fraction for each mode with $\\lambda_m\\Large/\\normalsize\\sum_i^M\\lambda_i$"
    ]
